change message heading

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header border-0">
-            <h5 class="modal-title fw-bold" id="presidentModalLabel">Message from the President</h5>
+            <h5 class="modal-title fw-bold" id="presidentModalLabel">Message from the President NSASL</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body p-4">
@@ -257,7 +257,7 @@
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header border-0">
-            <h5 class="modal-title fw-bold" id="vpModalLabel">Message from the Vice President</h5>
+            <h5 class="modal-title fw-bold" id="vpModalLabel">Message from the President of APSO</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body p-4">
