change favicon again

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/APSO Logo.png" rel="icon">
-  <link href="ssets/img/APSO Logo.png" rel="apple-touch-icon">
+  <link href="assets/img/APSO Logo.png" rel="apple-touch-icon">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
