create abstract-guideline,privacy-policy,registration-guidline pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,23 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home<br></a></li>
-          <li><a href="#key-info">Information</a></li>
+          <li class="dropdown">
+            <a href="#"><span>Information</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+
+              <li><a href="abstract-guidelines.html">Abstract Submission Guidelines</a></li>
+
+              <li class="dropdown">
+                <a href="#"><span>Registration</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <ul>
+                  <li><a href="registration-guidelines.html">Registration Guidelines</a></li>
+                  <li><a href="privacy-policy.html">Privacy & Data Protection Policy</a></li>
+                </ul>
+              </li>
+
+            </ul>
+          </li>
+
           <li><a href="#culture-gallery">Gallery</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
