make registration-guideline page table responsive

--- a/registration-guidelines.html
+++ b/registration-guidelines.html
@@ -114,38 +114,48 @@
                         committee.</p>
 
                     <!-- Sample Fee Table (You can adjust later when final fees arrive) -->
-                    <table class="fees-table table">
-                        <tr>
-                            <th>Category</th>
-                            <th>Low-Income Countries</th>
-                            <th>Middle-Income Countries</th>
-                            <th>High-Income Countries</th>
-                        </tr>
-                        <tr>
-                            <td>Consultants / Specialists</td>
-                            <td>USD 120</td>
-                            <td>USD 180</td>
-                            <td>USD 250</td>
-                        </tr>
-                        <tr>
-                            <td>Medical Officers</td>
-                            <td>USD 80</td>
-                            <td>USD 120</td>
-                            <td>USD 160</td>
-                        </tr>
-                        <tr>
-                            <td>Nurses / Allied Health Professionals</td>
-                            <td>USD 50</td>
-                            <td>USD 80</td>
-                            <td>USD 120</td>
-                        </tr>
-                        <tr>
-                            <td>Students / Trainees</td>
-                            <td>USD 30</td>
-                            <td>USD 50</td>
-                            <td>USD 80</td>
-                        </tr>
-                    </table>
+                    <div class="table-responsive fees-table-responsive">
+                        <table class="table fees-table">
+                            <thead>
+                                <tr>
+                                    <th>Category</th>
+                                    <th>Low-Income Countries</th>
+                                    <th>Middle-Income Countries</th>
+                                    <th>High-Income Countries</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td data-label="Category">Consultants / Specialists</td>
+                                    <td data-label="Low-Income Countries">USD 120</td>
+                                    <td data-label="Middle-Income Countries">USD 180</td>
+                                    <td data-label="High-Income Countries">USD 250</td>
+                                </tr>
+
+                                <tr>
+                                    <td data-label="Category">Medical Officers</td>
+                                    <td data-label="Low-Income Countries">USD 80</td>
+                                    <td data-label="Middle-Income Countries">USD 120</td>
+                                    <td data-label="High-Income Countries">USD 160</td>
+                                </tr>
+
+                                <tr>
+                                    <td data-label="Category">Nurses / Allied Health Professionals</td>
+                                    <td data-label="Low-Income Countries">USD 50</td>
+                                    <td data-label="Middle-Income Countries">USD 80</td>
+                                    <td data-label="High-Income Countries">USD 120</td>
+                                </tr>
+
+                                <tr>
+                                    <td data-label="Category">Students / Trainees</td>
+                                    <td data-label="Low-Income Countries">USD 30</td>
+                                    <td data-label="Middle-Income Countries">USD 50</td>
+                                    <td data-label="High-Income Countries">USD 80</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
 
                     <hr class="my-4">
 
