create travel page

--- a/abstract-guidelines.html
+++ b/abstract-guidelines.html
@@ -43,6 +43,7 @@
                         <ul>
 
                             <li><a href="abstract-guidelines.html">Abstract Submission Guidelines</a></li>
+                            <li><a href="travel.html">Travel Information</a></li>
 
                             <li class="dropdown">
                                 <a href="#"><span>Registration</span> <i
