--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <ul>
 
               <li><a href="abstract-guidelines.html">Abstract Submission Guidelines</a></li>
+              <li><a href="travel.html">Travel Information</a></li>
 
               <li class="dropdown">
                 <a href="#"><span>Registration</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
