--- a/travel.html
+++ b/travel.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Privacy Policy | The Asia Pacific Stroke Conference 2026</title>
+    <title>Travel Information | The Asia Pacific Stroke Conference 2026</title>
 
     <!-- Favicons -->
     <link href="assets/img/APSO Logo.png" rel="icon">
@@ -18,9 +18,34 @@
 
     <!-- Main CSS -->
     <link href="assets/css/main.css" rel="stylesheet">
+
+    <style>
+        .travel-card {
+            background: #ffffff;
+            border-radius: 12px;
+            padding: 35px;
+            box-shadow: 0 4px 25px rgba(0, 0, 0, 0.08);
+        }
+
+        .travel-section h3 {
+            margin-top: 40px;
+            margin-bottom: 15px;
+            font-weight: 700;
+        }
+
+        .travel-section p,
+        .travel-section li {
+            font-size: 16px;
+            line-height: 1.8;
+        }
+
+        .travel-section ul {
+            margin-left: 20px;
+        }
+    </style>
 </head>
 
-<body class="privacy-page">
+<body class="travel-page">
 
     <!-- Header -->
     <header id="header" class="header d-flex align-items-center fixed-top">
@@ -69,7 +94,7 @@
 
     <main class="main">
 
-        <!-- Page Title Banner -->
+        <!-- PAGE TITLE BANNER -->
         <section class="page-title" style="
       background-image: url('assets/img/caraousal1.png');
       background-size: cover;
@@ -77,133 +102,130 @@
       padding: 120px 0 80px;
       color: white;">
             <div class="container text-center" data-aos="fade-up">
-                <h1 class="fw-bold">Privacy & Data Protection Policy</h1>
-                <p class="mt-2">Committed to safeguarding your personal information</p>
+                <h1 class="fw-bold">Travel Information</h1>
+                <p class="mt-2">Plan your journey to Colombo, Sri Lanka</p>
             </div>
         </section>
 
-        <!-- Privacy Policy Content -->
-        <section class="section light-background">
+        <!-- TRAVEL CONTENT -->
+        <section class="section travel-section light-background">
             <div class="container aos-init aos-animate" data-aos="fade-up">
 
-                <div class="policy-card p-4 p-md-5 shadow-sm rounded-3">
+                <div class="travel-card">
 
-                    <!-- INTRO -->
-                    <h2 class="mb-3 fw-bold">APSC 2026 Privacy Policy</h2>
+                    <!-- VISA -->
+                    <h3><i class="bi bi-passport me-2 text-primary"></i>Visa Information</h3>
                     <p>
-                        Asia Pacific Stroke Conference 2026 (APSC 2026) recognizes the importance of protecting personal
-                        information
-                        and is committed to handling such data responsibly and in accordance with applicable data
-                        protection laws,
-                        including the Personal Data Protection Act of Sri Lanka (PDPA) and international standards.
+                        International delegates must obtain a valid Visa or Electronic Travel Authorization (ETA)
+                        before entering Sri Lanka.
+                        The process is entirely online and typically takes only a few days.
                     </p>
-                    <p>This policy outlines what personal data we collect, how we use it, who we may share it with, and
-                        your rights as a participant.</p>
-
-                    <hr class="my-4">
-
-                    <!-- PERSONAL DATA WE COLLECT -->
-                    <h3 class="fw-bold mt-4">Personal Data We Collect</h3>
-                    <p>We may collect the following information from participants, speakers, and delegates.</p>
-
-                    <h5 class="mt-3 fw-semibold">For All Registrants:</h5>
-                    <ul>
-                        <li>First & Last Name</li>
-                        <li>Title and Professional Credentials</li>
-                        <li>Nationality</li>
-                        <li>Position / Designation</li>
-                        <li>Organization / Institution</li>
-                        <li>Country of Residence</li>
-                        <li>Email Address</li>
-                        <li>Payment Information (for registration)</li>
-                    </ul>
-
-                    <h5 class="mt-3 fw-semibold">For Speakers:</h5>
-                    <ul>
-                        <li>Photograph</li>
-                        <li>Biosketch / Profile Information</li>
-                    </ul>
-
-                    <hr class="my-4">
-
-                    <!-- PURPOSES -->
-                    <h3 class="fw-bold mt-4">Purposes for Which We Collect and Use Personal Data</h3>
-                    <ul>
-                        <li>To process and manage conference registrations</li>
-                        <li>To respond to inquiries and service requests</li>
-                        <li>To verify identity during registration and check-in</li>
-                        <li>To communicate updates about your participation</li>
-                        <li>To feature speakers in official conference materials</li>
-                        <li>To prepare badges, certificates, and other event items</li>
-                        <li>To meet administrative or legal requirements</li>
-                    </ul>
-
-                    <hr class="my-4">
-
-                    <!-- DISCLOSURE -->
-                    <h3 class="fw-bold mt-4">Disclosure of Personal Data</h3>
-                    <p>We do <strong>not</strong> sell, rent, or share personal data with unrelated third parties.</p>
-                    <p>Your data may be shared only with:</p>
-                    <ul>
-                        <li>Official contractors or service providers assisting event operations</li>
-                        <li>Authorized partners coordinating the scientific program or logistics</li>
-                        <li>Regulatory or legal authorities when required by law</li>
-                    </ul>
-
-                    <hr class="my-4">
-
-                    <!-- DATA STORAGE -->
-                    <h3 class="fw-bold mt-4">Data Storage and Safeguarding</h3>
                     <p>
-                        All personal data collected through the official APSC 2026 website or other approved channels
-                        is securely stored in a password-protected system with strict access controls.
-                        We use reasonable administrative and technical measures to prevent unauthorized access or
-                        misuse.
+                        Apply through the official portal:<br>
+                        <a href="https://www.eta.gov.lk" target="_blank"><strong>www.eta.gov.lk</strong></a>
                     </p>
 
-                    <hr class="my-4">
+                    <hr>
 
-                    <!-- RETENTION -->
-                    <h3 class="fw-bold mt-4">Retention Period</h3>
-                    <p>
-                        Personal data will be retained only as long as necessary for event administration,
-                        legal obligations, or post-event requirements.
-                    </p>
+                    <!-- TRANSPORT -->
+                    <h3><i class="bi bi-taxi-front me-2 text-primary"></i>Transport from Airport to Colombo</h3>
+                    <p>BIA Airport is 30 km from Colombo (45–60 minutes travel time). Recommended transport options:</p>
 
-                    <hr class="my-4">
-
-                    <!-- YOUR RIGHTS -->
-                    <h3 class="fw-bold mt-4">Your Rights</h3>
-                    <p>You may contact us to:</p>
                     <ul>
-                        <li>Request access to your personal data</li>
-                        <li>Request correction, updates, or deletion</li>
-                        <li>Withdraw consent for specific uses (where applicable)</li>
+                        <li><strong>Airport Taxi Counters</strong> – Official on-arrival taxis.</li>
+                        <li><strong>PickMe</strong> – Local ride-hailing app (cars, vans, executive).</li>
+                        <li><strong>Welcome Pickups</strong> – Pre-booked airport transfers.</li>
+                        <li><strong>Hotel Transfers</strong> – Available on request.</li>
                     </ul>
 
-                    <hr class="my-4">
+                    <hr>
+
+                    <!-- ACCOMMODATION -->
+                    <h3><i class="bi bi-building me-2 text-primary"></i>Accommodation</h3>
+                    <p>Colombo offers a variety of hotels close to the conference venue at Cinnamon Grand Colombo.
+                    </p>
+
+                    <ul>
+                        <li>Cinnamon Grand Colombo (Venue)</li>
+                        <li>Galle Face Hotel</li>
+                        <li>Taj Samudra Colombo</li>
+                        <li>Hilton Colombo</li>
+                        <li>Mövenpick Hotel Colombo</li>
+                        <li>Cinnamon Red Colombo</li>
+                    </ul>
+
+                    <p>We recommend booking early due to peak travel season in November.</p>
+
+                    <hr>
+
+                    <!-- AIR TRAVEL -->
+                    <h3><i class="bi bi-airplane me-2 text-primary"></i>Air Travel to Sri Lanka</h3>
+                    <p>
+                        Bandaranaike International Airport (BIA) is the main international gateway with flights from
+                        major global airlines including:
+                    </p>
+
+                    <ul>
+                        <li>SriLankan Airlines</li>
+                        <li>Qatar Airways</li>
+                        <li>Emirates</li>
+                        <li>Singapore Airlines</li>
+                        <li>Etihad Airways</li>
+                        <li>Thai Airways</li>
+                        <li>Air India</li>
+                    </ul>
+
+                    <p>
+                        Check flight availability and updates at:<br>
+                        <a href="https://www.airport.lk" target="_blank"><strong>www.airport.lk</strong></a>
+                    </p>
+
+                    <hr>
+
+                    <!-- EXPLORE -->
+                    <h3><i class="bi bi-geo-alt me-2 text-primary"></i>Explore Sri Lanka</h3>
+                    <p>Discover the beauty, culture, and heritage of the island during your visit.</p>
+
+                    <ul>
+                        <li><strong>Ancient Cities:</strong> Sigiriya, Anuradhapura, Polonnaruwa</li>
+                        <li><strong>Hill Country:</strong> Kandy, Nuwara Eliya, Ella</li>
+                        <li><strong>Beaches:</strong> Mirissa, Unawatuna, Trincomalee</li>
+                        <li><strong>Wildlife:</strong> Yala, Udawalawe, Horton Plains</li>
+                    </ul>
+
+                    <p>
+                        Learn more at:<br>
+                        <a href="https://www.srilanka.travel" target="_blank"><strong>www.srilanka.travel</strong></a>
+                    </p>
+
+                    <hr>
+
+                    <!-- HEALTH -->
+                    <h3><i class="bi bi-shield-check me-2 text-primary"></i>Health & Safety</h3>
+                    <ul>
+                        <li>Ensure routine vaccinations are up to date.</li>
+                        <li>Use mosquito repellent (Dengue is present).</li>
+                        <li>Drink bottled or filtered water.</li>
+                        <li>Eat at reputable restaurants.</li>
+                        <li>Medical facilities are widely available in Colombo.</li>
+                    </ul>
+
+                    <p>
+                        Health guidelines:<br>
+                        <a href="https://www.srilanka.travel/health-and-safety" target="_blank"><strong>Health & Safety
+                                Info</strong></a>
+                    </p>
+
+                    <hr>
 
                     <!-- CONTACT -->
-                    <h3 class="fw-bold mt-4">Contact Information</h3>
+                    <h3><i class="bi bi-envelope-paper me-2 text-primary"></i>Further Assistance</h3>
                     <p>
                         <strong>APSC 2026 Secretariat</strong><br>
-                        C/o National Stroke Association of Sri Lanka (NSASL)<br>
-                        Colombo, Sri Lanka<br>
-                        Email: info@apsc2026.lk<br>
-                        Website: www.apsc2026.lk
-                    </p>
-
-                    <hr class="my-4">
-
-                    <!-- POLICY UPDATES -->
-                    <h3 class="fw-bold mt-4">Policy Updates</h3>
-                    <p>
-                        This Privacy Policy may be updated periodically.
-                        The most recent version will always be available on the APSC 2026 official website.
+                        Email: apsc2026.secretariat@gmail.com
                     </p>
 
                 </div>
-
             </div>
         </section>
 
@@ -214,16 +236,14 @@
         <div class="footer-top">
             <div class="container">
                 <div class="row gy-4">
-
                     <div class="col-lg-4 col-md-6 footer-about">
                         <a href="index.html" class="logo d-flex align-items-center">
                             <span class="sitename">APSC 2026</span>
                         </a>
                         <div class="footer-contact pt-3">
-                            <p>Colombo</p>
-                            <p>Sri Lanka</p>
-                            <p class="mt-3"><strong>Phone:</strong> <span>+94 11 123 4567</span></p>
-                            <p><strong>Email:</strong> <span>info@apsc2026.lk</span></p>
+                            <p>Colombo, Sri Lanka</p>
+                            <p class="mt-3"><strong>Phone:</strong> +94 11 123 4567</p>
+                            <p><strong>Email:</strong> info@apsc2026.lk</p>
                         </div>
                     </div>
 
@@ -244,7 +264,6 @@
                         <p><i class="bi bi-telephone me-2"></i>+94 11 123 4567</p>
                         <p><i class="bi bi-envelope me-2"></i>info@apsc2026.lk</p>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -252,14 +271,12 @@
         <div class="copyright text-center">
             <div
                 class="container d-flex flex-column flex-lg-row justify-content-center justify-content-lg-between align-items-center">
-
                 <div class="d-flex flex-column align-items-center align-items-lg-start">
-                    <div>© Copyright <strong><span>APSC 2026</span></strong>. All Rights Reserved</div>
+                    <div>© Copyright <strong>APSC 2026</strong>. All Rights Reserved</div>
                     <div class="credits">
                         Designed by <a href="https://portfolio-rouge-six-72.vercel.app/" target="_blank">Tharinxdu</a>
                     </div>
                 </div>
-
             </div>
         </div>
     </footer>
