--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="cta-btn d-none d-sm-block" href="#buy-tickets">Register now</a>
+      <a class="cta-btn d-none d-sm-block" href="./pages/registration/index.html">Register now</a>
 
     </div>
   </header>
@@ -123,8 +123,8 @@
         </div> -->
         <div class="hero-buttons d-flex flex-wrap justify-content-center gap-3 mt-4" data-aos="fade-up"
           data-aos-delay="300">
-          <a href="#register" class="btn-hero btn-register">Register Now</a>
-          <a href="#submit-abstract" class="btn-hero btn-abstract">Submit Abstract</a>
+          <a href="./pages/registration/index.html" class="btn-hero btn-register">Register Now</a>
+          <a href="./pages/abstract/abstracts.html" class="btn-hero btn-abstract">Submit Abstract</a>
         </div>
       </div>
 
